vercre-issuer/src/snapshots/vercre_issuer__batch__tests__ad-response.snap
---
source: vercre-issuer/src/batch.rs
assertion_line: 507
expression: "&response"
---
credential_responses:
  - "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: "[c_nonce_expires_in]"
