vercre-issuer/src/snapshots/vercre_issuer__batch__tests__ad-state.snap
---
source: vercre-issuer/src/batch.rs
assertion_line: 530
expression: state
---
expires_at: "[expires_at]"
credential_issuer: "http://vercre.io"
credential_configuration_ids:
  - EmployeeID_JWT
holder_id: normal_user
token:
  access_token: ABCDEF
  token_type: Bearer
  c_nonce: "[c_nonce]"
  c_nonce_expires_at: "[c_nonce_expires_at]"
